syntax = "proto3";

package transaction;
option go_package = "./transaction/";

import "google/protobuf/timestamp.proto";

message Transaction {
  string id = 1;
  string from_user_id = 2;
  string to_user_id = 3;
  string amount = 4;
  string currency = 5;
  string status = 6;
  google.protobuf.Timestamp created_at = 7;
}

message SendMoneyRequest {
  string from_user_id = 1;
  string to_user_id = 2;
  string amount = 3;
  string currency = 4;
}

message GetTransactionRequest {
  string transaction_id = 1;
}

service TransactionService {
  rpc SendMoney(SendMoneyRequest) returns (Transaction);
  // rpc GetTransactions(GetTransactionsRequest) returns (GetTransactionsResponse);
  rpc GetTransaction(GetTransactionRequest) returns (Transaction);
}
